やりなおし

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/GraduationWork")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/GraduationWork")
++ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Sotusei")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 
