--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -195,6 +195,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MagicLeap_Left_Trackpad_Y)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MagicLeap_Right_Trackpad_Y)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MagicLeap_Right_Trackpad_X)
++AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=SpaceBar)
++AxisMappings=(AxisName="UpDown",Scale=-1.000000,Key=LeftControl)
++AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=Gamepad_LeftY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
