ワールド設定変更

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,4 +84,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Sotusei")
+NearClipPlane=1.000000
 
