--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -7,3 +7,6 @@ bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
 
+[/Script/UMGEditor.UMGEditorProjectSettings]
+DefaultCompilerOptions=(bAllowBlueprintTick=True,bAllowBlueprintPaint=True,PropertyBindingRule=Allow,Rules=)
+
