--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -38,10 +38,9 @@
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Overlap,bTraceType=True,bStaticObject=False,Name="Bullet")
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Trace")
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Trace",Response=ECR_Ignore)))
-+EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Pawn"),(Channel="Bullet"),(Channel="Visibility",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Pawn"),(Channel="Bullet"),(Channel="Visibility"),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Trace",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Bullet"),(Channel="Visibility",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
