ぴすとるてくすちゃ ＆ コンパイル20分くらい

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -89,3 +89,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 NearClipPlane=1.000000
 
+[/Script/Engine.RendererSettings]
+r.VirtualTextures=True
+
