--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,6 +88,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 NearClipPlane=1.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=120.000000))
 
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
