一旦セーブロードの仕組みだけ

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,7 +68,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/SaveData/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
