--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -168,6 +168,22 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ADS",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="ADS",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="FlashLight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
++ActionMappings=(ActionName="Decide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="Cancel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
++ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Right)
++ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Left)
++ActionMappings=(ActionName="SelectTabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="SelectTabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="SelectTabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="SelectTabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="SeleftUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="SeleftUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Up)
++ActionMappings=(ActionName="SeleftDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="SeleftDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
