ベータUIパッド対応(作業時間7時間)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,3 +93,6 @@ SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
+
