--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -172,7 +172,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +ActionMappings=(ActionName="PlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
-+ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Right)
++ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftX)
 +ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Left)
 +ActionMappings=(ActionName="SelectTabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
@@ -184,6 +184,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SeleftDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="SeleftDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Down)
 +ActionMappings=(ActionName="PlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="UseHealing",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="UseHealing",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
