--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -190,6 +190,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
 +ActionMappings=(ActionName="WeaponChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="WeaponChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="Open",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
