--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -169,8 +169,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="FlashLight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Decide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="Cancel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="PlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
-+ActionMappings=(ActionName="PlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="InputPlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="InputPlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftX)
 +ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
@@ -183,7 +183,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SeleftUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Up)
 +ActionMappings=(ActionName="SeleftDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="SeleftDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Down)
-+ActionMappings=(ActionName="PlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="InputPlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="UseHealing",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="UseHealing",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Open",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
@@ -191,6 +191,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="WeaponChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="WeaponChange",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="Open",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="InputOptionMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
++ActionMappings=(ActionName="InputOptionMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
