--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,14 +62,14 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Stages/apart.apart
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/SaveData/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Stages/apart.apart
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
