パッケージ化試験

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,7 +69,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/SaveData/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Stages/apart.apart
+GameDefaultMap=/Game/Stages/YagiMap.YagiMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
