--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
-StagingDirectory=(Path="D:/UnrealProjects/Sotusei/Pack")
+StagingDirectory=(Path="D:/Users/2200060/Desktop")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -43,9 +43,11 @@ bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
-InternationalizationPreset=English
+InternationalizationPreset=EFIGSCJK
 -CulturesToStage=en
 +CulturesToStage=en
++CulturesToStage=ja-JP
++CulturesToStage=ja
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=True
@@ -75,5 +77,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/Stages/apart")
++MapsToCook=(FilePath="/Game/Stages/YagiMap")
 
