パッケージ化用インプット変換マクロ作成

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,7 +11,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="D:/Users/2200060/Desktop")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
