コリジョン変更

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -41,7 +41,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Trace",Response=ECR_Ignore)))
 +EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Pawn"),(Channel="Bullet"),(Channel="Visibility"),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Trace",Response=ECR_Ignore)))
-+EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Bullet"),(Channel="Visibility",Response=ECR_Overlap)))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Bullet"),(Channel="Visibility")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
