--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,7 +69,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/SaveData/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Stages/YagiMap.YagiMap
+GameDefaultMap=/Game/Stages/apart.apart
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -88,7 +88,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 NearClipPlane=1.000000
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=120.000000))
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=25.000000),UpperBound=(Type=Exclusive,Value=60.000000))
 bSmoothFrameRate=True
 
 [/Script/Engine.RendererSettings]
