--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,8 +88,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Sotusei")
 NearClipPlane=1.000000
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=25.000000),UpperBound=(Type=Exclusive,Value=60.000000))
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=32.000000),UpperBound=(Type=Exclusive,Value=62.000000))
 bSmoothFrameRate=True
+MinDesiredFrameRate=40.000000
+bUseFixedFrameRate=False
+FixedFrameRate=60.000000
 
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
