よくわからん

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,6 +93,7 @@ bSmoothFrameRate=True
 MinDesiredFrameRate=40.000000
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
+WorldSettingsClassName=/Script/Sotusei.MyWorldSettings
 
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
