--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,7 +93,7 @@ bSmoothFrameRate=True
 MinDesiredFrameRate=40.000000
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
-WorldSettingsClassName=/Script/Sotusei.MyWorldSettings
+WorldSettingsClassName=/Script/Engine.WorldSettings
 
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
