だいたいAIバグ直ったかも？/ End でデバッグモードに設定
勝手に視界外の判定になるのは意味わからん

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,3 +101,19 @@ r.VirtualTextures=True
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
 
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=False
+
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
+ActivationKey=End
+
