--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -77,5 +77,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/Stages/apart")
++MapsToCook=(FilePath="/Game/Stages/matsuoStage")
 
