--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -172,7 +172,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="InputPlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +ActionMappings=(ActionName="InputPlayerMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
-+ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftX)
++ActionMappings=(ActionName="SelectRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Right)
 +ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="SelectLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Left)
 +ActionMappings=(ActionName="SelectTabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
