--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=12C740C246317A0979FA9E91471E3DE4
-ProjectName=First Person BP Game Template
+ProjectName=The Mansion
 
 [StartupActions]
 bAddPacks=True
