--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Stages/apart.apart
+EditorStartupMap=/Game/Stages/FPCharDebugMap.FPCharDebugMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
