プロジェクト設定とその他軽量化試し

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
-StagingDirectory=(Path="D:/Users/2200060/Desktop")
+StagingDirectory=(Path="C:/Users/hokut/Downloads/WindowsNoEditor")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
@@ -78,4 +78,5 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Stages/matsuoStage")
++MapsToCook=(FilePath="/Game/Stages/Title")
 
