軽量化実験+ライティング調整

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,10 @@ WorldSettingsClassName=/Script/Engine.WorldSettings
 
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure.Bias=0.052381
+r.DefaultFeature.AutoExposure.Method=1
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
